--- a/steps/04_ verify_email.yml
+++ b/steps/04_ verify_email.yml
@@ -30,7 +30,11 @@ trigger:
           params:
             person: lucca
             messages:
-            - text: "Right! Wait... Oh boy..."
+            - text: "Right!"
+            - text: "Wait..."
+              delay: 1000
+            - text: "Oh boy..."
+              delay: 2000
         - actionId: finish_step
       else:
         do:
