--- a/steps/03_env_local_setup.yml
+++ b/steps/03_env_local_setup.yml
@@ -10,7 +10,7 @@ startFlow:
       params:
         person: lucca
         messages:
-          - text: "Alright, time to get our app talking to Wix! You've got a template environment file named `.env.template`. Copy it to create a `.env.local` file, then add the Wix app ID there. After that, open the app and check if you can see the data on the website. Let me know how it goes!"
+          - text: "Alright, time to get our app talking to Wix! You've got a template environment file named `.env.template`. Copy it to create a `.env.local` file, :instruction[then add the Wix app ID there]. After that, open the app and check if you can see the data on the website. Let me know how it goes!"
     - actionId: ready_message
       params:
         person: lucca
