--- a/steps/02_oauth_app_creation.yml
+++ b/steps/02_oauth_app_creation.yml
@@ -10,59 +10,21 @@ startFlow:
       params:
         person: lucca
         messages:
-          - text: Great! Now, let's set up secure access. Create a [new OAuth app](https://dev.wix.com/docs/go-headless/getting-started/setup/authorization/create-an-o-auth-app-for-visitors-and-members) in your newly created Wix headless website by clicking Headless settings at the bottom, :instruction[and
-              send me your client ID]. This step is crucial for you to be able to pull some data into your website. <br/> ![](https://res.cloudinary.com/wilco/image/upload/v1700738096/Screenshot_2023-11-23_at_13.10.38_brrgco.png)
+          - text: Great! Now, let's set up secure access. In order to start working we need you to connect to your Wix app.
+          - components:
+            - type: wix_connect
 trigger:
-  type: user_message
+  type: user_event
+  params:
+    event: wix_user_connected
   flowNode:
     do:
-      - actionId: store_user_property
+      - actionId: wix_load_data
         params:
-          name: client_id
-          value: ${userMessageText}
-
-      - actionId: network_http_request
-        name: create_token
+          dataPath: "assets/data.json"
+      - actionId: bot_message
         params:
-          url: "https://www.wixapis.com/oauth2/token"
-          method: POST
-          data: 
-            clientId: ${user.properties.client_id}
-            grantType: anonymous
-    
-      - actionId: store_user_property
-        params:
-          name: client_token
-          value: ${outputs.create_token.data?.access_token}
-
-          
-      - actionId: network_http_request
-        name: query_items
-        params:
-          url: "https://www.wixapis.com/wix-data/v2/items/query"
-          method: POST
-          headers: 
-            Authorization: ${user.properties.client_token}
-          data: 
-            dataCollectionId: Our-Team
-    if:
-      conditions:
-        - conditionId: is_truthy
-          params:
-            value: ${outputs.query_items.data?.pagingMetadata?.count > 0}
-
-      then:
-        do:
-        - actionId: bot_message
-          params:
-            person: lucca
-            messages:
-            - text: "![](https://i.giphy.com/media/Jir7AUookJHIVb5aYM/giphy.gif) </br> Great job with the OAuth setup, I already see that you have some data in the 'Our Team' collection. The client ID is key for secure interactions. Ready for the next challenge?"
-        - actionId: finish_step
-      else:
-        do:
-        - actionId: bot_message
-          params:
-            person: lucca
-            messages:
-            - text: "It can be tricky, I know. Double-check the OAuth section in the Wix dashboard."
+          person: lucca
+          messages:
+          - text: "![](https://i.giphy.com/media/Jir7AUookJHIVb5aYM/giphy.gif) </br> Great job with the setup, I already see that you have some data in the 'Our Team' collection. Ready for the next challenge?"
+      - actionId: finish_step
