--- a/steps/05_data_correction.yml
+++ b/steps/05_data_correction.yml
@@ -18,28 +18,11 @@ trigger:
   type: user_ready_response
   flowNode:
     do:
-      - actionId: network_http_request
-        name: create_token
-        params:
-          url: "https://www.wixapis.com/oauth2/token"
-          method: POST
-          data: 
-            clientId: ${user.properties.client_id}
-            grantType: anonymous
-    
-      - actionId: store_user_property
-        params:
-          name: client_token
-          value: ${outputs.create_token.data?.access_token}
-
-          
-      - actionId: network_http_request
+      - actionId: wix_request
         name: query_items
         params:
           url: "https://www.wixapis.com/wix-data/v2/items/query"
           method: POST
-          headers: 
-            Authorization: ${user.properties.client_token}
           data: 
             dataCollectionId: Our-Team
             query: 
