--- a/quest.yml
+++ b/quest.yml
@@ -14,6 +14,7 @@ skills:
   - configuration
 steps:
   - create_headless_app
+  - wix_connect
   - oauth_app_creation
   - env_local_setup
   - verify_email
